@@ -44,6 +44,10 @@ try_compile(
     SOURCES ${PROJECT_SOURCE_DIR}/config-tests/PQXX_HAVE_STRERROR_S.cxx
 )
 try_compile(
+    PQXX_HAVE_TYPE_DISPLAY ${PROJECT_BINARY_DIR}
+    SOURCES ${PROJECT_SOURCE_DIR}/config-tests/PQXX_HAVE_TYPE_DISPLAY.cxx
+)
+try_compile(
     PQXX_HAVE_YEAR_MONTH_DAY ${PROJECT_BINARY_DIR}
     SOURCES ${PROJECT_SOURCE_DIR}/config-tests/PQXX_HAVE_YEAR_MONTH_DAY.cxx
 )
