@@ -109,6 +109,16 @@ AC_COMPILE_IFELSE(
         [Define if this feature is available.]),
     PQXX_HAVE_STRERROR_S=no)
 AC_MSG_RESULT($PQXX_HAVE_STRERROR_S)
+AC_MSG_CHECKING([PQXX_HAVE_TYPE_DISPLAY])
+PQXX_HAVE_TYPE_DISPLAY=yes
+AC_COMPILE_IFELSE(
+    [read_test(PQXX_HAVE_TYPE_DISPLAY.cxx)],
+    AC_DEFINE(
+        [PQXX_HAVE_TYPE_DISPLAY],
+        1,
+        [Define if this feature is available.]),
+    PQXX_HAVE_TYPE_DISPLAY=no)
+AC_MSG_RESULT($PQXX_HAVE_TYPE_DISPLAY)
 AC_MSG_CHECKING([PQXX_HAVE_YEAR_MONTH_DAY])
 PQXX_HAVE_YEAR_MONTH_DAY=yes
 AC_COMPILE_IFELSE(
